--- a/SEO-opti.html
+++ b/SEO-opti.html
@@ -1,13 +1,13 @@
 <html>
   <head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-83RFW7K3G7"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7VNQSHGEWN"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-83RFW7K3G7');
+  gtag('config', 'G-7VNQSHGEWN');
 </script>
     <title>
         SEO opti
